# Motor-testing

./: .gitignore  automate_script.py  data.csv  data_analysis.ipynb  read_serial.py
Unitree-Go1/: CMakeLists.txt
Unitree-Go1/example/: main.cpp  preprogrammed.h  stop.cpp
unitree/: CMakeLists.txt
unitree/data/: .~lock.go1_with_all.csv#  .~lock.sweep1_AC.csv#  .~lock.sweep1_DC.csv#  .~lock.sweep3_DC.csv#  .~lock.sweep_1.csv#  command  efficiency.py  forward.csv  go1.csv  go1_fdbk_fdfw.csv  go1_no_feedback.csv  go1_no_feedback_no_feedforward.csv  go1_nofeedback.csv  go1_nofeedforward.csv  go1_with_all.csv  plotter.py  shunt_res  sweep1_AC.csv  sweep1_DC.csv  sweep2.csv  sweep2_AC.csv  sweep2_DC.csv  sweep3_AC.csv  sweep3_DC.csv  sweep3_torque.csv  sweep4_current.csv  sweep5_current.csv  sweep5_torque.csv  sweep6_current.csv  sweep6_torque.csv  sweep7_current.csv  sweep_1.csv  torque vs speed.py
unitree/data/driving_motor/: logging.csv
unitree/example/: PID_controller.cpp  PID_helper.cpp  feed_forward_data.cpp  main.cpp  preprogrammed.cpp  preprogrammed.h  stop.cpp
unitree/python_control/: PID_v1.py  control.py  frequency_test.ipynb
